--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@node20
         with:
           python-version: 3.12.2
           architecture: x64
